# panescale

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: agent-notify.sh
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: cmd-s-save-not-working-in-file-preview.md  release-ci-fails.md  shiki-highlighting-and-md-shields.md  terminal-bash-not-running.md  terminal-cwd-ignores-active-project.md  tmux-double-spawn-and-kill-on-close.md  tmux-double-spawn-and-statusbar.md  tmux-isolation-not-working.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
e2e/: canvas-interactions.spec.ts  drag-and-drop.spec.ts  tauri-mocks.ts
e2e/tmux/: helpers.ts  tmux-integration.spec.ts
scripts/: generate-icons.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy.rs
src-tauri/src/fs/: commands.rs
src-tauri/src/git/: commands.rs
src-tauri/src/platform/: mod.rs  shell.rs  tmux.rs
src-tauri/src/pty/: commands.rs  manager.rs  mod.rs
src-tauri/src/ssh/: commands.rs  config.rs  manager.rs  mod.rs
src-tauri/src/state/: mod.rs  persistence.rs
src/components/: FileDragOverlay.tsx  UpdateChecker.tsx
src/hooks/: useFocusMode.ts  useKeyboardShortcuts.ts  useOpenTerminalFromTile.ts  usePty.ts  useSsh.ts
src/lib/: alignmentSnap.ts  audio.ts  (+13 more)
test-results/: .last-run.json
(+201 files in other folders)
