[package]
name = "panescale"
version = "0.1.9"
edition = "2021"
description = "Spatial terminal workspace"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
git2 = { version = "0.20", features = ["vendored-openssl"] }
russh = { version = "0.58", features = ["aws-lc-rs"] }
ssh2-config = "0.7"
async-trait = "0.1"
bytes = "1"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
warp = "0.3"
